Finish debian refactoring

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -62,7 +62,7 @@
     <PackageOutputPath>$(ArtifactsDir)build\</PackageOutputPath>
   </PropertyGroup>
 
-  <Import Project="eng\targets\RuntimeIdentifiers.props"  Condition="'$(MSBuildProjectExtension)' == '.vcxproj'" />
+  <Import Project="eng\targets\RuntimeIdentifiers.props" />
   <Import Project="eng\targets\Cpp.Common.props"  Condition="'$(MSBuildProjectExtension)' == '.vcxproj'" />
   <Import Project="eng\targets\SharedFx.Common.props"  Condition="'$(MSBuildProjectExtension)' == '.shfxproj'" />
   <Import Project="eng\targets\Wix.Common.props"  Condition="'$(MSBuildProjectExtension)' == '.wixproj'" />
